# OMX_jazzy

./: .gitignore  .gitmodules  99-c920.rules  99-u2d2.rules  CLAUDE.md  ERRORS.md  README.md
.github/workflows/: ci.yml
docs/: Makefile  U2D2_HARDWARE_GUIDE.md  adding_a_joint.md  api.rst  camera.rst  changelog.rst  conf.py  configuration.rst  control_examples.rst  index.rst  installation.rst  license.rst  quickstart.rst  simulation.rst  troubleshooting.rst  usage.rst
docs/_static/: custom.css
scripts/: add_joint.py  verify_joints.sh
src/dynamixel_demo/: README.md  package.xml  setup.cfg  setup.py
src/dynamixel_demo/docs/: .gitignore  build_pdf.sh  dynamixel_demo.tex
src/dynamixel_demo/dynamixel_demo/: servo_ros_node.py  single_servo_demo.py
src/dynamixel_demo/launch/: servo_demo.launch.py
src/omx_control/: CMakeLists.txt  package.xml
src/omx_control/config/: c920_camera.yaml  control_params.yaml
src/omx_control/launch/: bringup_all.launch.py  bringup_with_camera.launch.py  camera.launch.py  full_control.launch.py  rviz_moveit.launch.py  simulation.launch.py  simulation_with_camera.launch.py
src/omx_control/omx_control/: __init__.py  fk_controller.py  gripper_controller.py  ik_controller.py  teach_playback.py
src/omx_control/srv/: GripperControl.srv  MoveJoints.srv  MoveToPosition.srv
